--- a/package.json
+++ b/package.json
@@ -2,40 +2,56 @@
   "name": "learn-d3",
   "version": "1.0.0",
   "description": "Basic D3.js project for learning purposes",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --hot --inline --progress",
-    "build": "webpack -p --config webpack.prod.config.js --hide-modules"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/willamesoares/learn-d3.git"
+    "start": "webpack-dev-server --config build/webpack.config.dev.js",
+    "build": "webpack --config build/webpack.config.prod.js"
   },
   "keywords": [
     "d3js"
   ],
-  "author": "Will Soares",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/willamesoares/learn-d3/issues"
-  },
-  "homepage": "https://github.com/willamesoares/learn-d3#readme",
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
-  },
   "dependencies": {
-    "d3": "^5"
-  }
+    "core-js": "^3.0.1",
+    "d3": "^5.9.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "csv-loader": "^3.0.2",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "papaparse": "^4.6.3",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "sugarss": "^2.0.0",
+    "svg-inline-loader": "^0.8.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Raoul1996/learn-d3.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Raoul1996/learn-d3/issues"
+  },
+  "homepage": "https://github.com/Raoul1996/learn-d3#readme",
+  "author": "",
+  "license": "ISC"
 }
